--- a/WPFCaptureSample/WPFCaptureSample.csproj
+++ b/WPFCaptureSample/WPFCaptureSample.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{4DDD37B1-E3E8-46C1-BDE9-3039A93DAF27}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>WPFCompTest</RootNamespace>
-    <AssemblyName>WPFCompTest</AssemblyName>
+    <RootNamespace>WPFCaptureSample</RootNamespace>
+    <AssemblyName>WPFCaptureSample</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
