--- a/WPFCaptureSample/WPFCaptureSample.csproj
+++ b/WPFCaptureSample/WPFCaptureSample.csproj
@@ -47,7 +47,9 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Numerics" />
-    <Reference Include="System.Numerics.Vectors, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+    <Reference Include="System.Numerics.Vectors, Version=4.1.4.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Numerics.Vectors.4.5.0\lib\net46\System.Numerics.Vectors.dll</HintPath>
+    </Reference>
     <Reference Include="System.Runtime.WindowsRuntime, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETCore\v4.5\System.Runtime.WindowsRuntime.dll</HintPath>
@@ -81,11 +83,6 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="BasicCapture.cs" />
-    <Compile Include="CaptureHelper.cs" />
-    <Compile Include="CompositionHelper.cs" />
-    <Compile Include="CoreMessagingHelper.cs" />
-    <Compile Include="Direct3D11Helper.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -117,6 +114,16 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CaptureSampleCore\CaptureSampleCore.csproj">
+      <Project>{502b19a1-292a-4e7f-9c19-b16ca42f1f82}</Project>
+      <Name>CaptureSampleCore</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Robmikh.WindowsRuntimeHelpers\Robmikh.WindowsRuntimeHelpers.csproj">
+      <Project>{ec969287-3d35-410a-806c-0baaa7564911}</Project>
+      <Name>Robmikh.WindowsRuntimeHelpers</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
