--- a/WPFCaptureSample/packages.config
+++ b/WPFCaptureSample/packages.config
@@ -3,4 +3,5 @@
   <package id="SharpDX" version="4.2.0" targetFramework="net472" />
   <package id="SharpDX.Direct3D11" version="4.2.0" targetFramework="net472" />
   <package id="SharpDX.DXGI" version="4.2.0" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
 </packages>
