--- a/CaptureSampleCore/CaptureSampleCore.csproj
+++ b/CaptureSampleCore/CaptureSampleCore.csproj
@@ -1,14 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-      <TargetFramework>net5.0-windows10.0.19041.0</TargetFramework>
+      <TargetFramework>net6.0-windows10.0.20348.0</TargetFramework>
+      <SupportedOSPlatformVersion>10.0.19041.0</SupportedOSPlatformVersion>
+      <Platforms>AnyCPU;x64</Platforms>
+	  <CsWinRTIncludes>WinRTInteropTools</CsWinRTIncludes>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Windows.CsWin32" Version="0.1.599-beta">
+    <PackageReference Include="Microsoft.Windows.CsWin32" Version="0.1.635-beta">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Windows.CsWinRT" Version="1.5.0" />
     <PackageReference Include="System.Numerics.Vectors" Version="4.6.0-preview5.19224.8" />
   </ItemGroup>
 
